--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
         uses: actions/checkout@master
 
       - name: Login to docker registry
-#        run: docker login ${{ secrets.DOCKER_REGISTRY_HOST }} -u ${{ secrets.DOCKER_REGISTRY_USER }} -p ${{ secrets.DOCKER_REGISTRY_SECRET }}
-        run: echo ${{ secrets.DOCKER_REGISTRY_SECRET }} | docker login --username ${{ secrets.DOCKER_REGISTRY_USER }} --password-stdin secrets.DOCKER_REGISTRY_HOST
+        run: docker login ${{ secrets.DOCKER_REGISTRY_HOST }} -u ${{ secrets.DOCKER_REGISTRY_USER }} -p ${{ secrets.DOCKER_REGISTRY_SECRET }}
+#        run: echo ${{ secrets.DOCKER_REGISTRY_SECRET }} | docker login --username ${{ secrets.DOCKER_REGISTRY_USER }} --password-stdin secrets.DOCKER_REGISTRY_HOST
 
 
       - name: Build docker image
